variables.Variables.scala.error
Compilation error:
Variables:8: error: type mismatch;
 found   : Int
 required: Boolean
while(cpt){
      ^