variables.Variables.scala.code

var cpt : Int = 0
while(!isOverBaggle()){
  forward()
  cpt = cpt + 1
}
pickupBaggle()
while(cpt){
  backward()
  cpt-=1;
}